# openlaunch

./: CONTRIBUTING.md  PARTS.md  README.md  pyproject.toml
.github/workflows/: pylint.yml
scripts/: capture_training_images.py  start-kiosk.sh  test_yolo_detection.py
src/openlaunch/: camera_tracker.py  launch_monitor.py  ops243.py  server.py
ui/: package.json
ui/src/: App.css  App.tsx
ui/src/components/: BallDetectionIndicator.css  BallDetectionIndicator.tsx  CameraFeed.css  CameraFeed.tsx  ShotDisplay.css  ShotList.css  ShotList.tsx  StatsView.css  StatsView.tsx
ui/src/hooks/: useSocket.ts
