[project]
name = "openlaunch"
version = "0.2.0"
description = "DIY golf launch monitor using OPS243-A Doppler radar"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "OpenLaunch Contributors" }
]
keywords = ["golf", "launch-monitor", "doppler", "radar", "ops243", "raspberry-pi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pyserial>=3.5",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
# Future: Camera support for launch angle
camera = [
    "opencv-python>=4.5.0",
]

[project.scripts]
openlaunch = "openlaunch.launch_monitor:main"

[project.urls]
Homepage = "https://github.com/yourusername/openlaunch"
Repository = "https://github.com/yourusername/openlaunch"
Issues = "https://github.com/yourusername/openlaunch/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openlaunch"]

[dependency-groups]
dev = [
    "pylint>=3.3.9",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line length handled separately

[tool.pylint.main]
py-version = "3.9"

[tool.pylint.messages_control]
disable = [
    "too-many-instance-attributes",  # Radar and monitor classes need many attributes
    "too-many-public-methods",       # Radar API has many commands
    "too-many-locals",               # Distance estimation lookup table
    "too-many-statements",           # CLI main function
    "import-outside-toplevel",       # argparse in main() is fine
    "broad-exception-caught",        # Generic catch in streaming loop is intentional
    "invalid-name",                  # Allow DRIVER_TABLE, CLUB_FACTORS constants
]

[tool.pylint.format]
max-line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
